<resources>
    <string name="app_name">TimeManager</string>
    <string name="finish">00:00</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="default_time">00:00</string>
    <string name="default_title">Task Title</string>
    <string name="default_time_estimate">Time</string>
    <string name="task_time_format">%1$s - %2$s</string>
    <string name="modify_task">MODIFY TASK</string>
    <string name="every_day">Every day</string>
    <string name="repeat_interval">Every %1$d days</string>
    <string name="finished">FINISHED</string>
    <string name="add_more">MORE...</string>
    <string name="settings">Settings</string>
    <string name="divider">:</string>
    <string name="split_tasks_longer_than">Split tasks longer than:</string>
    <string name="tasks_are_planned_in_between">Tasks are planned in between:</string>
    <string name="add_to_google_calendar">Add to google calendar</string>
    <string name="add_task">ADD TASK</string>
    <string name="copy">Copy</string>

</resources>