<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="5dp">

    <!-- First Layout (Green) -->
    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/task_shadow">
    </LinearLayout>

    <!-- Second Layout (Red) -->
    <LinearLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/task"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_time_estimate"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_text"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:text="@string/default_title"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <SeekBar
                    android:id="@+id/progress_bar"
                    style="@style/taskSeekBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/task_time_left"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/task_time_left"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_centerVertical="true"
                    android:text="@string/default_time" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="20dp"
                android:background="@drawable/task_control">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:gravity="center"
                    android:src="@drawable/ic_replay"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/back" />

                <ImageButton
                    android:id="@+id/play"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:gravity="center"
                    android:src="@drawable/ic_play"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/play" />

                <ImageButton
                    android:id="@+id/forward"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:gravity="center"
                    android:src="@drawable/ic_forward"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/forward" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/ic_remove"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/delete" />

                <ImageButton
                    android:id="@+id/modify"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/ic_modify"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/delete" />

                <ImageButton
                    android:id="@+id/finish"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/ic_done"
                    android:background="@android:color/transparent"
                    app:tint="@android:color/white"
                    android:contentDescription="@string/finish" />

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</FrameLayout>

